# learning_api_in_actix

./: Cargo.toml
src/: error.rs  lib.rs  main.rs
src/routes/: api.rs  index.rs  mod.rs  model.rs
src/web/: mod.rs  routes_login.rs  routes_tickets.rs
static/: index.html
templates/: index.html
